--- a/index.html
+++ b/index.html
@@ -600,7 +600,7 @@
                     <a href="#"><i class="fab fa-twitter"></i></a>
                 </div>
                 <div class="copyright">
-                    <p>Website by <a href="https://raodevelopers.xyz" target="_blank"><b>Rao Jatin</b></a></p>
+                    <p>Website by <a href="https://raodevlopers.xyz" target="_blank"><b>Rao Jatin</b></a></p>
                 </div>
             </div>
         </div>
